# minicoredumper

./: AUTHORS  COPYING  COPYING.BSD  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
debian/: control  copyright  minicoredumper.default  minicoredumper.install  minicoredumper.manpages  minicoredumper.postinst  rules  watch
debian/conf/: generic.recept.json  minicoredumper.cfg.json
dists/debian/: README
dists/debian/jessie/debian/: README.Debian  changelog  control  copyright  libminicoredumper-dev.manpages  libminicoredumper2.manpages  minicoredumper-utils.install  minicoredumper.default  minicoredumper.install  minicoredumper.lintian-overrides  minicoredumper.postinst  rules  watch
dists/debian/jessie/debian/patches/: 0001-mcd_vdump_data_register_text.3.patch
dists/debian/jessie/debian/upstream/: signing-key.asc
dists/debian/stretch/debian/: changelog  control  libminicoredumper-dev.install  libminicoredumper-dev.manpages  libminicoredumper2.manpages  libminicoredumper2.symbols  minicoredumper-utils.manpages  minicoredumper.init  minicoredumper.manpages  minicoredumper.postrm  rules  watch
dists/debian/stretch/debian/patches/: series
dists/openembedded/: README
dists/openembedded/meta/recipes-extended/minicoredumper/: minicoredumper_2.0.0.bb
dists/openembedded/meta/recipes-kernel/minicoredumper/minicoredumper/: remove-script-deps.patch
etc/dbus-1/system.d/: org.ericsson.mcd.conf
etc/default/: minicoredumper.in
etc/init.d/: minicoredumper.in
etc/minicoredumper/: example.recept.json  generic.recept.json  minicoredumper.cfg.json  minicoredumper.cfg.json.in
examples/: example.recept.json
lib/: Makefile.am  json.c
src/: Makefile.am
src/api/: Makefile.am  mcd_dump_data_dbus_start.3  mcd_dump_data_dbus_stop.3  mcd_dump_data_register_bin.3  mcd_dump_data_register_text.3  mcd_dump_data_unregister.3  minicoredumper.h
src/common/: Makefile.am  common.c  common.h  elf_dumplist.c  invalid_ident.c
src/compat/: Makefile.am  compat_mcd.h
src/coreinject/: Makefile.am  coreinject.1  main.c
src/dbus/: Makefile.am  common.h  interface.xml
src/libminicoredumper/: Makefile.am  dbus_mcd.c  dump_data_private.h  libminicoredumper.7  mcd.c  minicoredumper-uninstalled.pc.in  minicoredumper.pc.in
src/minicoredumper/: Makefile.am  corestripper.c  corestripper.h  dbus_mcd.c  elf_dumplist.c  elf_dumplist.h  minicoredumper.1  minicoredumper.cfg.json.5  minicoredumper.recept.json.5  prog_config.c  prog_config.h  tar.h
src/minicoredumper_dbusd/: Makefile.am  daemon.c  minicoredumper_dbusd.1
src/minicoredumper_demo/: Makefile.am  main.c
src/minicoredumper_regd/: Makefile.am  daemon.c  minicoredumper_regd.1
src/minicoredumper_trigger/: Makefile.am  main.c  minicoredumper_trigger  minicoredumper_trigger.1
website/: build.sh
website/root/: theme.css
website/src/: faq.binindirectdump.html  faq.corepipelimit.html  faq.defaultregions.html  faq.dumpstatic.html  faq.gdb.html  faq.maxstacksize.html  faq.needdbus.html  faq.rlimit.html  faq.symbolstripping.html  faq.test.html  index.downloads.html  index.features.html  index.news.html  index.splash.html  index.support.html  installation.content.html  privacypolicy.content.html
website/src/template/: faq.ahead.html  faq.head.html  faq.qahead.html  faq.qhead.html  faq.qtail.html  root.head.html  root.tail.html
