##
## Author: John Ogness
##
## This file has been put into the public domain.
## You can do whatever you want with this file.
##

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = COPYING.BSD COPYING.LGPLv2.1 \
	     etc/minicoredumper/minicoredumper.cfg.json \
	     etc/minicoredumper/generic.recept.json \
	     etc/minicoredumper/example.recept.json \
	     debian/changelog \
	     debian/compat \
	     debian/conf/generic.recept.json \
	     debian/conf/minicoredumper.cfg.json \
	     debian/control \
	     debian/copyright \
	     debian/libminicoredumper2.install \
	     debian/libminicoredumper2.manpages \
	     debian/libminicoredumper2.symbols \
	     debian/libminicoredumper-dev.install \
	     debian/libminicoredumper-dev.manpages \
	     debian/minicoredumper.default \
	     debian/minicoredumper.init \
	     debian/minicoredumper.install \
	     debian/minicoredumper.lintian-overrides \
	     debian/minicoredumper.manpages \
	     debian/minicoredumper.postinst \
	     debian/minicoredumper-utils.install \
	     debian/minicoredumper-utils.manpages \
	     debian/README.Debian \
	     debian/rules \
	     debian/source/format \
	     debian/watch

DIST_SUBDIRS = lib src
SUBDIRS = lib src
